force-app/main/default/objects/TASKRAY__trTaskInboxNotification__c/TASKRAY__trTaskInboxNotification__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that is used for in-app task notifications.</description>
    <label>TaskRay Task Inbox Notification</label>
    <nameField>
        <label>TaskRay Task Inbox Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Inbox Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>