force-app/main/default/objects/TASKRAY__trTaskInboxNotification__c/fields/TASKRAY__trNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNotificationDate__c</fullName>
    <label>Notification DateTime</label>
    <type>DateTime</type>
</CustomField>