force-app/main/default/objects/TASKRAY__trTaskInboxNotification__c/fields/TASKRAY__trNotificationLabelText__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNotificationLabelText__c</fullName>
    <label>Notification Label Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>